2014-06-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_copy_modules.php: Delete the 
	source agent from the target agents lists in massive
	copy form to avoid errors for ticket: #869

2014-06-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Change incorrect color assigned to
	maintenance events on pdf reports events

2014-06-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/users/configure_user.php: Fixed some input
	properties.

	* include/graphs/functions_flot.php: Added an option
	to set the width to auto on the function "flot_vcolumn_chart".

	* include/graphs/flot/pandora.flot.js: Increased the tick size
	of the vertical labels on the function "pandoraFlotVBars".

2014-06-10  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Added the function
	"graph_snmp_traps_treemap".

	* include/functions_netflow.php: Fixed a little error.

	* operation/snmpconsole/snmp_view.php: Fixed the pagination.
	Now is possible to see a treemap graph of oid per agent with
	the snmptraps received.

2014-06-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager.php, extensions/update_manager/*,
	include/functions_config.php: remove the old update manager. Bye bye
	my old friend.
	
	* godmode/update_manager_xxx -> godmode/update_manager,
	godmode/update_manager/* -> godmode/update_manager/*,
	godmode/menu.php: rename
	the update manager.

2014-06-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php,
	include/functions_update_manager.php, index.php,
	general/logon_ok.php, extensions/update_manager.php,
	godmode/update_manager_xxx/update_manager.online.php: work in the
	first version of new update manager.

2014-06-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager_xxx/update_manager.online.php,
	include/functions_update_manager.php,
	include/javascript/update_manager.js,