@@ -1,3 +1,10 @@
+2014-06-12 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* godmode/massive/massive_delete_modules.php,
+	operation/agentes/ver_agente.php: Fixed bug that all
+	agents' module could be target of deletion,
+	if the user has an AW privilege for any.
+
 2014-06-12  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/massive/massive_copy_modules.php: Delete the 
